--- a/.github/workflows/database-migrations.yml
+++ b/.github/workflows/database-migrations.yml
@@ -110,7 +110,7 @@ jobs:
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-slug: travelmatch
+          project-id: 261defa2-bcaf-4905-9230-35c1acc3b026
           env-slug: dev
 
       - name: Setup Supabase CLI
@@ -152,7 +152,7 @@ jobs:
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-slug: travelmatch
+          project-id: 261defa2-bcaf-4905-9230-35c1acc3b026
           env-slug: prod
 
       - name: Setup Supabase CLI
