--- a/.github/workflows/monorepo-ci.yml
+++ b/.github/workflows/monorepo-ci.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-slug: travelmatch
+          project-id: 261defa2-bcaf-4905-9230-35c1acc3b026
           env-slug: ${{ github.ref_name == 'main' && 'prod' || 'dev' }}
         continue-on-error: true
 
@@ -115,7 +115,7 @@ jobs:
           VITE_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imd3bXZnaGVhb3FrYnF6c2h1ZnRzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzE3NTM0NzAsImV4cCI6MjA0NzMyOTQ3MH0.placeholder
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: admin-dist
           path: apps/admin/dist
@@ -134,7 +134,7 @@ jobs:
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-slug: travelmatch
+          project-id: 261defa2-bcaf-4905-9230-35c1acc3b026
           env-slug: prod
 
       - name: Setup Supabase CLI
