chore(web): cleanup old app/ and components/ structure
V2 architecture uses src/ directory pattern.
Old files moved/replaced with new structure.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@travelmatch/shared": "workspace:*",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "leva": "^0.10.1",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
