chore: migrate to new Infisical workspace (cafe77a6) with projectId flags

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "dev": "infisical run --env=dev -- pnpm exec expo start",
     "start": "infisical run --env=dev -- pnpm exec expo start",
-    "android": "infisical run --env=dev -- pnpm exec expo run:android",
-    "ios": "infisical run --env=dev -- pnpm exec expo run:ios",
-    "web": "infisical run --env=dev -- pnpm exec expo start --web",
+    "android": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo run:android",
+    "ios": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo run:ios",
+    "web": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo start --web",
     "dev:local": "expo start",
     "ios:local": "expo run:ios",
     "android:local": "expo run:android",
@@ -30,9 +30,9 @@
     "clean": "rm -rf node_modules .expo dist coverage",
     "prebuild": "pnpm exec expo prebuild",
     "build": "pnpm exec expo export",
-    "build:ios": "infisical run --env=prod -- pnpm exec eas build --platform ios",
-    "build:android": "infisical run --env=prod -- pnpm exec eas build --platform android",
-    "build:all": "infisical run --env=prod -- pnpm exec eas build --platform all",
+    "build:ios": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- pnpm exec eas build --platform ios",
+    "build:android": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- pnpm exec eas build --platform android",
+    "build:all": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- pnpm exec eas build --platform all",
     "db:types": "cd ../.. && supabase gen types typescript --linked > apps/mobile/src/types/database.generated.ts",
     "db:types:local": "cd ../.. && supabase gen types typescript --local > apps/mobile/src/types/database.generated.ts"
   },
