feat: add Infisical to admin app & cleanup unused secrets
- Add Infisical integration to admin (dev, build, start scripts)
- Fix mobile dev/start scripts with projectId flag
- Remove unused secrets: Stripe, Cloudflare Stream, Upstash Redis
- All apps now use Infisical for secret management
- Secrets count: 45 per environment (removed 5 unused)

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "dev": "infisical run --env=dev -- pnpm exec expo start",
-    "start": "infisical run --env=dev -- pnpm exec expo start",
+    "dev": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo start",
+    "start": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo start",
     "android": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo run:android",
     "ios": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo run:ios",
     "web": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo start --web",
