--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
-    "start": "next start -p 3001",
+    "dev": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- next dev -p 3001",
+    "build": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- next build",
+    "start": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- next start -p 3001",
+    "dev:local": "next dev -p 3001",
     "lint": "eslint src --ext .ts,.tsx || true",
     "type-check": "echo 'Admin type-check skipped (Next.js handles build-time types)' && exit 0",
     "type-check:strict": "tsc --noEmit",
