--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- next dev -p 3001",
     "build": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- next build",
+    "build:ci": "next build",
     "start": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- next start -p 3001",
     "dev:local": "next dev -p 3001",
     "lint": "eslint src --ext .ts,.tsx || true",
