--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
         continue-on-error: true
 
@@ -85,7 +85,7 @@ jobs:
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
         continue-on-error: true
 
