--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: ${{ github.ref_name == 'main' && 'prod' || 'dev' }}
         continue-on-error: true
 
