fix: update Infisical secrets-action to v1 with correct parameters

--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -51,9 +51,9 @@ jobs:
       - name: 🔐 Import secrets from Infisical
         uses: Infisical/secrets-action@v1
         with:
-          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           environment: ${{ github.ref_name == 'main' && 'production' || 'staging' }}
 
       - name: 📦 Install Supabase CLI
