--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,11 +44,11 @@ jobs:
           cache: 'pnpm'
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1.0.15
+        uses: Infisical/secrets-action@v1
         with:
-          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
         continue-on-error: true
 
@@ -81,11 +81,11 @@ jobs:
           cache: 'pnpm'
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1.0.15
+        uses: Infisical/secrets-action@v1
         with:
-          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
         continue-on-error: true
 
