--- a/.github/workflows/database-migrations.yml
+++ b/.github/workflows/database-migrations.yml
@@ -106,11 +106,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1.0.15
+        uses: Infisical/secrets-action@v1
         with:
-          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: dev
 
       - name: Setup Supabase CLI
@@ -148,11 +148,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1.0.15
+        uses: Infisical/secrets-action@v1
         with:
-          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
 
       - name: Setup Supabase CLI
