--- a/.github/workflows/monorepo-ci.yml
+++ b/.github/workflows/monorepo-ci.yml
@@ -33,11 +33,12 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1.0.15
+        uses: Infisical/secrets-action@v1
         with:
+          method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          workspaceId: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: ${{ github.ref_name == 'main' && 'prod' || 'dev' }}
 
       - name: Build packages
@@ -132,7 +133,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1.0.15
+        uses: Infisical/secrets-action@v1
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
