--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,9 +44,10 @@ jobs:
           cache: 'pnpm'
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1
+        uses: infisical/secrets-action@v1
         with:
-          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth
+          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
           project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
@@ -81,9 +82,10 @@ jobs:
           cache: 'pnpm'
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1
+        uses: infisical/secrets-action@v1
         with:
-          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth
+          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
           project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
