--- a/.github/workflows/database-migrations.yml
+++ b/.github/workflows/database-migrations.yml
@@ -106,9 +106,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1
+        uses: infisical/secrets-action@v1
         with:
-          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth
+          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
           project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: dev
@@ -148,9 +149,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1
+        uses: infisical/secrets-action@v1
         with:
-          method: universal-auth          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          method: universal-auth
+          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
           project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
           env-slug: prod
