--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,14 +5,14 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "dev": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo start",
-    "start": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo start",
-    "android": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo run:android",
-    "ios": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo run:ios",
-    "web": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=dev -- pnpm exec expo start --web",
-    "dev:local": "expo start",
-    "ios:local": "expo run:ios",
-    "android:local": "expo run:android",
+    "dev": "pnpm exec expo start",
+    "start": "pnpm exec expo start",
+    "android": "pnpm exec expo run:android",
+    "ios": "pnpm exec expo run:ios",
+    "web": "pnpm exec expo start --web",
+    "dev:infisical": "infisical run --env=dev -- pnpm exec expo start",
+    "ios:infisical": "infisical run --env=dev -- pnpm exec expo run:ios",
+    "android:infisical": "infisical run --env=dev -- pnpm exec expo run:android",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -30,9 +30,11 @@
     "clean": "rm -rf node_modules .expo dist coverage",
     "prebuild": "pnpm exec expo prebuild",
     "build": "pnpm exec expo export",
-    "build:ios": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- pnpm exec eas build --platform ios",
-    "build:android": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- pnpm exec eas build --platform android",
-    "build:all": "infisical run --projectId=fa0ed450-40e2-4063-b4f4-ce5cca83a57e --env=prod -- pnpm exec eas build --platform all",
+    "build:ios": "pnpm exec eas build --platform ios",
+    "build:android": "pnpm exec eas build --platform android",
+    "build:all": "pnpm exec eas build --platform all",
+    "build:ios:infisical": "infisical run --env=prod -- pnpm exec eas build --platform ios",
+    "build:android:infisical": "infisical run --env=prod -- pnpm exec eas build --platform android",
     "db:types": "cd ../.. && supabase gen types typescript --linked > apps/mobile/src/types/database.generated.ts",
     "db:types:local": "cd ../.. && supabase gen types typescript --local > apps/mobile/src/types/database.generated.ts"
   },
