feat: bilingual system (TR/EN) and UI improvements
- Add LanguageContext for full TR/EN translations
- Create shared Navbar with language toggle
- Transform ProofCeremony to Moment Proposals
- Add AuraRitual and ManifestoLoop components
- Remove 'travel vibe' terminology
- Fix mobile responsive issues
- Enhance store badges visibility
- Disable CustomCursor artifact
- Improve Turkish content
- Fix TypeScript errors

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,7 +27,8 @@
     "next": "16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
