chore: Merge stashed work (plan name updates, migration fixes, sentry configs)

--- a/docs/mobile/store-metadata/app-store-metadata.json
+++ b/docs/mobile/store-metadata/app-store-metadata.json
@@ -5,14 +5,14 @@
   "primary_category": "LIFESTYLE",
   "secondary_category": "SOCIAL_NETWORKING",
   "age_rating": "17+",
-  "privacy_policy_url": "https://travelmatch.app/privacy",
-  "support_url": "https://travelmatch.app/support",
-  "marketing_url": "https://travelmatch.app",
+  "privacy_policy_url": "",
+  "support_url": "",
+  "marketing_url": "",
   "localizations": {
     "tr-TR": {
       "name": "TravelMatch",
       "subtitle": "Sırayı Atla. Anında Bağlan.",
-      "description": "🚀 BEKLEMEYE SON. HAREKETİN ZAMANI.\n\nTravelMatch sıradan bir tanışma uygulaması değil — bu bir sosyal devrim. Sonsuz kaydırmalardan, eşleşme yorgunluğundan ve \"selam\" mesajlarından sıkıldın mı? Biz de.\n\n⚡ PROOF OF INTENT - NİYETİN KANITI\nBir hediye gönder. Sıranın önüne geç. Anında bağlan.\n• Ortalama bağlantı süresi: 60 saniyenin altında\n• Hediye ekonomisi ile niyetini kanıtla\n• Algoritma beklentisi yok — sadece aksiyon\n\n🎬 UNBUFFERED MOMENTS - ANLARIN GERÇEKLİĞİ\nGerçek insanlar. Gerçek anlar. Gerçek yerler.\n• Yaşayan, nefes alan şehir keşfi\n• Filtre yok, sahtelik yok\n• O anı yakala, sahneye katıl\n\n🎲 ENGINEERED LUCK - MÜHENDİSLİK ŞANSI\nDoğru insanla, doğru yerde buluşmanın en kısa yolu.\n• Şans rastgele değil; biz hızı kontrol ediyoruz\n• Sosyal hayatını hackle\n• Eşleşme yorgunluğuna son\n\n💎 NEDEN TİNDER/BUMBLE DEĞİL?\n• Tinder: Şans tabanlı, yavaş, yorucu\n• Bumble: 24 saat baskısı, eşleşmeler sona erer\n• Raya: Sonsuz bekleme listesi\n• TravelMatch: Hediye gönder → Anında erişim\n\n✨ ÖZELLİKLER\n• Dünya genelinde 50+ şehirde aktif\n• Güvenli escrow ödeme sistemi\n• Kripto & fiat para desteği\n• Doğrulanmış profiller (KYC)\n• VIP sosyal çevre erişimi\n\n🔒 GÜVENLİK\n• 256-bit SSL şifreleme\n• PCI-DSS uyumlu altyapı\n• KVKK/GDPR uyumlu\n• 2FA ile hesap güvenliği\n\n📱 ABONELİK PLANLARI\n• Passport (Ücretsiz): Temel erişim\n• First Class: Genişletilmiş limitler, öncelikli sıra\n• Concierge: Sınırsız erişim, VIP ayrıcalıklar\n\nGizlilik: https://travelmatch.app/privacy\nŞartlar: https://travelmatch.app/terms",
+      "description": "🚀 BEKLEMEYE SON. HAREKETİN ZAMANI.\n\nTravelMatch sıradan bir tanışma uygulaması değil — bu bir sosyal devrim. Sonsuz kaydırmalardan, eşleşme yorgunluğundan ve \"selam\" mesajlarından sıkıldın mı? Biz de.\n\n⚡ PROOF OF INTENT - NİYETİN KANITI\nBir hediye gönder. Sıranın önüne geç. Anında bağlan.\n• Ortalama bağlantı süresi: 60 saniyenin altında\n• Hediye ekonomisi ile niyetini kanıtla\n• Algoritma beklentisi yok — sadece aksiyon\n\n🎬 UNBUFFERED MOMENTS - ANLARIN GERÇEKLİĞİ\nGerçek insanlar. Gerçek anlar. Gerçek yerler.\n• Yaşayan, nefes alan şehir keşfi\n• Filtre yok, sahtelik yok\n• O anı yakala, sahneye katıl\n\n🎲 ENGINEERED LUCK - MÜHENDİSLİK ŞANSI\nDoğru insanla, doğru yerde buluşmanın en kısa yolu.\n• Şans rastgele değil; biz hızı kontrol ediyoruz\n• Sosyal hayatını hackle\n• Eşleşme yorgunluğuna son\n\n💎 NEDEN TİNDER/BUMBLE DEĞİL?\n• Tinder: Şans tabanlı, yavaş, yorucu\n• Bumble: 24 saat baskısı, eşleşmeler sona erer\n• Raya: Sonsuz bekleme listesi\n• TravelMatch: Hediye gönder → Anında erişim\n\n✨ ÖZELLİKLER\n• Dünya genelinde 50+ şehirde aktif\n• Güvenli escrow ödeme sistemi\n• Kripto & fiat para desteği\n• Doğrulanmış profiller (KYC)\n• VIP sosyal çevre erişimi\n\n🔒 GÜVENLİK\n• 256-bit SSL şifreleme\n• PCI-DSS uyumlu altyapı\n• KVKK/GDPR uyumlu\n• 2FA ile hesap güvenliği\n\n📱 ABONELİK PLANLARI\n• Free (Ücretsiz): Temel erişim\n• Standard: Genişletilmiş limitler, öncelikli sıra\n• Premium: Sınırsız erişim, VIP ayrıcalıklar\n\nGizlilik: Domain yakında\nŞartlar: Domain yakında",
       "keywords": "tinder alternatif,bumble alternatif,raya davet,hızlı eşleşme,anında tanışma,hediye ile eşleş,sıra atlama,dating hack,sosyal keşif,lüks tanışma,vip dating,seyahat arkadaşı,matching fatigue,eşleşme yorgunluğu",
       "promotional_text": "⚡ Sıra bekleme devri bitti. Hediye gönder, anında bağlan. Eşleşme yorgunluğuna son!",
       "whats_new": "🚀 TravelMatch 3.0 - Proof of Intent Güncellemesi\n\n• ⚡ Yeni: Anında bağlantı sistemi\n• 🎁 Hediye ekonomisi entegrasyonu\n• 🌍 50+ yeni şehir eklendi\n• 💎 VIP sosyal çevre erişimi\n• 🔥 Performans x10 iyileştirme\n• 🐛 Hata düzeltmeleri"
@@ -20,7 +20,7 @@
     "en-US": {
       "name": "TravelMatch",
       "subtitle": "Skip the Queue. Connect Instantly.",
-      "description": "🚀 STOP WAITING. START CONNECTING.\n\nTravelMatch isn't just another dating app — it's a social revolution. Tired of endless swiping, matching fatigue, and \"hey\" messages? So were we.\n\n⚡ PROOF OF INTENT\nSend a gift. Skip the queue. Connect instantly.\n• Average connection time: Under 60 seconds\n• Prove your intent through our gifting economy\n• No algorithm waiting — just action\n\n🎬 UNBUFFERED MOMENTS\nReal people. Real moments. Real places.\n• Living, breathing city discovery\n• No filters, no fakeness\n• Catch a moment, join the scene\n\n🎲 ENGINEERED LUCK\nThe shortest path to meeting the right person at the right place.\n• Luck isn't random; we control the velocity\n• Hack your social life\n• End matching fatigue forever\n\n💎 WHY NOT TINDER/BUMBLE?\n• Tinder: Luck-based, slow, exhausting\n• Bumble: 24-hour pressure, matches expire\n• Raya: Endless waitlist\n• TravelMatch: Send gift → Instant access\n\n✨ FEATURES\n• Active in 50+ cities worldwide\n• Secure escrow payment system\n• Crypto & fiat currency support\n• Verified profiles (KYC)\n• VIP social circle access\n\n🔒 SECURITY\n• 256-bit SSL encryption\n• PCI-DSS compliant infrastructure\n• GDPR compliant\n• 2FA account security\n\n📱 SUBSCRIPTION PLANS\n• Passport (Free): Basic access\n• First Class: Extended limits, priority queue\n• Concierge: Unlimited access, VIP privileges\n\nPrivacy: https://travelmatch.app/privacy\nTerms: https://travelmatch.app/terms",
+      "description": "🚀 STOP WAITING. START CONNECTING.\n\nTravelMatch isn't just another dating app — it's a social revolution. Tired of endless swiping, matching fatigue, and \"hey\" messages? So were we.\n\n⚡ PROOF OF INTENT\nSend a gift. Skip the queue. Connect instantly.\n• Average connection time: Under 60 seconds\n• Prove your intent through our gifting economy\n• No algorithm waiting — just action\n\n🎬 UNBUFFERED MOMENTS\nReal people. Real moments. Real places.\n• Living, breathing city discovery\n• No filters, no fakeness\n• Catch a moment, join the scene\n\n🎲 ENGINEERED LUCK\nThe shortest path to meeting the right person at the right place.\n• Luck isn't random; we control the velocity\n• Hack your social life\n• End matching fatigue forever\n\n💎 WHY NOT TINDER/BUMBLE?\n• Tinder: Luck-based, slow, exhausting\n• Bumble: 24-hour pressure, matches expire\n• Raya: Endless waitlist\n• TravelMatch: Send gift → Instant access\n\n✨ FEATURES\n• Active in 50+ cities worldwide\n• Secure escrow payment system\n• Crypto & fiat currency support\n• Verified profiles (KYC)\n• VIP social circle access\n\n🔒 SECURITY\n• 256-bit SSL encryption\n• PCI-DSS compliant infrastructure\n• GDPR compliant\n• 2FA account security\n\n📱 SUBSCRIPTION PLANS\n• Free (Free): Basic access\n• Standard: Extended limits, priority queue\n• Premium: Unlimited access, VIP privileges\n\nPrivacy: Domain coming soon\nTerms: Domain coming soon",
       "keywords": "tinder alternative,bumble alternative,raya invite,fast matching,instant dating,gift to match,skip queue,dating hack,social discovery,luxury dating,vip dating,travel companion,matching fatigue,instant connection 2026",
       "promotional_text": "⚡ The waiting era is over. Send a gift, connect instantly. End matching fatigue!",
       "whats_new": "🚀 TravelMatch 3.0 - Proof of Intent Update\n\n• ⚡ New: Instant connection system\n• 🎁 Gifting economy integration\n• 🌍 50+ new cities added\n• 💎 VIP social circle access\n• 🔥 10x performance improvement\n• 🐛 Bug fixes"
@@ -51,11 +51,7 @@
       "05_vip_access.png",
       "06_wallet_crypto.png"
     ],
-    "ipad_pro_12_9": [
-      "01_instant_connect_hero.png",
-      "02_live_moments_feed.png",
-      "03_gift_to_unlock.png"
-    ]
+    "ipad_pro_12_9": ["01_instant_connect_hero.png", "02_live_moments_feed.png", "03_gift_to_unlock.png"]
   },
   "app_preview": {
     "video_url": null,
@@ -70,50 +66,34 @@
   },
   "in_app_purchases": [
     {
-      "product_id": "com.travelmatch.firstclass.monthly",
+      "product_id": "com.travelmatch.standard.monthly",
       "type": "AUTO_RENEWABLE_SUBSCRIPTION",
-      "reference_name": "First Class Monthly",
+      "reference_name": "Standard Monthly",
       "price_tier": 5,
       "localizations": {
         "tr-TR": {
-          "display_name": "First Class Aylık",
+          "display_name": "Standard Aylık",
           "description": "Öncelikli sıra, genişletilmiş limitler, VIP destek"
         },
         "en-US": {
-          "display_name": "First Class Monthly",
+          "display_name": "Standard Monthly",
           "description": "Priority queue, extended limits, VIP support"
         }
       }
     },
     {
-      "product_id": "com.travelmatch.concierge.monthly",
+      "product_id": "com.travelmatch.premium.monthly",
       "type": "AUTO_RENEWABLE_SUBSCRIPTION",
-      "reference_name": "Concierge Monthly",
+      "reference_name": "Premium Monthly",
       "price_tier": 8,
       "localizations": {
         "tr-TR": {
-          "display_name": "Concierge Aylık",
-          "description": "Sınırsız anında erişim, elit sosyal çevre, kişisel concierge"
+          "display_name": "Premium Aylık",
+          "description": "Sınırsız anında erişim, elit sosyal çevre, kişisel premium"
         },
         "en-US": {
-          "display_name": "Concierge Monthly",
-          "description": "Unlimited instant access, elite social circle, personal concierge"
-        }
-      }
-    },
-    {
-      "product_id": "com.travelmatch.platinum.monthly",
-      "type": "AUTO_RENEWABLE_SUBSCRIPTION",
-      "reference_name": "Platinum Monthly",
-      "price_tier": 12,
-      "localizations": {
-        "tr-TR": {
-          "display_name": "Platinum Aylık",
-          "description": "Her şey dahil + Özel etkinlik davetiyeleri + Kırmızı halı erişimi"
-        },
-        "en-US": {
-          "display_name": "Platinum Monthly",
-          "description": "All-inclusive + Exclusive event invites + Red carpet access"
+          "display_name": "Premium Monthly",
+          "description": "Unlimited instant access, elite social circle, personal premium"
         }
       }
     }
