--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.4",
+    "@sentry/nextjs": "^10.33.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.90.12",
@@ -54,6 +55,7 @@
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "otplib": "^12.0.1",
+    "posthog-js": "^1.321.0",
     "react": "19.1.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.1.0",
