--- a/turbo.json
+++ b/turbo.json
@@ -43,7 +43,13 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**"],
       "inputs": ["src/**", "index.html", "vite.config.ts", "package.json"],
-      "env": ["VITE_SUPABASE_URL", "VITE_SUPABASE_ANON_KEY"]
+      "env": [
+        "VITE_SUPABASE_URL",
+        "VITE_SUPABASE_ANON_KEY",
+        "NEXT_PUBLIC_SUPABASE_URL",
+        "NEXT_PUBLIC_SUPABASE_ANON_KEY",
+        "SUPABASE_SERVICE_ROLE_KEY"
+      ]
     },
     "admin#lint": {
       "outputs": []
