refactor: Remove all Upstash Redis references across codebase
Simplified architecture - Cloudflare + In-memory for rate limiting:

- Remove UPSTASH env vars from mobile/admin configs
- Update env.config.ts schema (remove Redis validation)
- Clean integrations-monitor mock data
- Update GitHub workflow (remove Redis secrets)
- Update docs: DATABASE_OPTIMIZATION_GUIDE, PERFORMANCE_OPTIMIZATION_GUIDE
- Clean scripts: set-supabase-secrets, test-edge-functions, monitor-edge-functions
- Update admin reports: INTEGRATION_STATUS_REPORT, EXECUTIVE_REPORT

Stack simplified:
- L1: Client cache (React Query)
- L2: CDN (Cloudflare Edge Cache)
- L3: In-memory rate limiting
- L4: PostgreSQL (Supabase)

--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -89,9 +89,7 @@ jobs:
             OPENAI_API_KEY="$OPENAI_API_KEY" \
             CLOUDFLARE_STREAM_API_KEY="$CLOUDFLARE_STREAM_API_KEY" \
             CLOUDFLARE_STREAM_ACCOUNT_ID="$CLOUDFLARE_STREAM_ACCOUNT_ID" \
-            MAPBOX_SECRET_TOKEN="$MAPBOX_SECRET_TOKEN" \
-            UPSTASH_REDIS_REST_URL="$UPSTASH_REDIS_REST_URL" \
-            UPSTASH_REDIS_REST_TOKEN="$UPSTASH_REDIS_REST_TOKEN"
+            MAPBOX_SECRET_TOKEN="$MAPBOX_SECRET_TOKEN"
 
           echo "Deploying all Edge Functions..."
           supabase functions deploy
