fix: correct Infisical project-slug to lovendo-app-infisical2

--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -54,7 +54,8 @@ jobs:
           method: universal
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-slug: travelmatch
+          domain: 'https://eu.infisical.com'
+          project-slug: lovendo-app-infisical2
           env-slug: ${{ github.ref_name == 'main' && 'prod' || 'staging' }}
 
       - name: 📦 Install Supabase CLI
