--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,144 +4,144 @@
 version: 2
 updates:
   # Mobile App (React Native + Expo)
-  - package-ecosystem: "npm"
-    directory: "/apps/mobile"
+  - package-ecosystem: 'npm'
+    directory: '/apps/mobile'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
     open-pull-requests-limit: 10
     reviewers:
-      - "lovendo-dev-team"
+      - 'lovendo-dev-team'
     labels:
-      - "dependencies"
-      - "mobile"
+      - 'dependencies'
+      - 'mobile'
     commit-message:
-      prefix: "deps(mobile)"
+      prefix: 'deps(mobile)'
     versioning-strategy: increase
     ignore:
       # Ignore major version updates for React Native (manual upgrade)
-      - dependency-name: "react-native"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "expo"
-        update-types: ["version-update:semver-major"]
+      - dependency-name: 'react-native'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'expo'
+        update-types: ['version-update:semver-major']
 
   # Web App (Next.js)
-  - package-ecosystem: "npm"
-    directory: "/apps/web"
+  - package-ecosystem: 'npm'
+    directory: '/apps/web'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
     open-pull-requests-limit: 10
     reviewers:
-      - "lovendo-dev-team"
+      - 'lovendo-dev-team'
     labels:
-      - "dependencies"
-      - "web"
+      - 'dependencies'
+      - 'web'
     commit-message:
-      prefix: "deps(web)"
+      prefix: 'deps(web)'
 
   # Admin Dashboard
-  - package-ecosystem: "npm"
-    directory: "/apps/admin"
+  - package-ecosystem: 'npm'
+    directory: '/apps/admin'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
     open-pull-requests-limit: 5
     labels:
-      - "dependencies"
-      - "admin"
+      - 'dependencies'
+      - 'admin'
 
   # Design System
-  - package-ecosystem: "npm"
-    directory: "/packages/design-system"
+  - package-ecosystem: 'npm'
+    directory: '/packages/design-system'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
     open-pull-requests-limit: 5
     labels:
-      - "dependencies"
-      - "design-system"
+      - 'dependencies'
+      - 'design-system'
 
   # Shared Package
-  - package-ecosystem: "npm"
-    directory: "/packages/shared"
+  - package-ecosystem: 'npm'
+    directory: '/packages/shared'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
     open-pull-requests-limit: 5
     labels:
-      - "dependencies"
-      - "shared"
+      - 'dependencies'
+      - 'shared'
 
   # ML Service (Python)
-  - package-ecosystem: "pip"
-    directory: "/services/ml"
+  - package-ecosystem: 'pip'
+    directory: '/services/ml'
     schedule:
-      interval: "weekly"
-      day: "tuesday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'tuesday'
+      time: '09:00'
     open-pull-requests-limit: 5
     labels:
-      - "dependencies"
-      - "ml"
-      - "python"
+      - 'dependencies'
+      - 'ml'
+      - 'python'
     commit-message:
-      prefix: "deps(ml)"
+      prefix: 'deps(ml)'
 
   # Payment Service
-  - package-ecosystem: "npm"
-    directory: "/services/payment"
+  - package-ecosystem: 'npm'
+    directory: '/services/payment'
     schedule:
-      interval: "daily"  # Critical service - daily updates
-    time: "09:00"
+      interval: 'daily' # Critical service - daily updates
+    time: '09:00'
     open-pull-requests-limit: 5
     labels:
-      - "dependencies"
-      - "payment"
-      - "critical"
+      - 'dependencies'
+      - 'payment'
+      - 'critical'
     commit-message:
-      prefix: "deps(payment)"
+      prefix: 'deps(payment)'
 
   # Job Queue Service
-  - package-ecosystem: "npm"
-    directory: "/services/job-queue"
+  - package-ecosystem: 'npm'
+    directory: '/services/job-queue'
     schedule:
-      interval: "weekly"
-      day: "tuesday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'tuesday'
+      time: '09:00'
     open-pull-requests-limit: 5
     labels:
-      - "dependencies"
-      - "job-queue"
+      - 'dependencies'
+      - 'job-queue'
 
   # GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "wednesday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'wednesday'
+      time: '09:00'
     open-pull-requests-limit: 5
     labels:
-      - "dependencies"
-      - "github-actions"
-      - "ci-cd"
+      - 'dependencies'
+      - 'github-actions'
+      - 'ci-cd'
     commit-message:
-      prefix: "ci"
+      prefix: 'ci'
 
   # Docker (if used)
-  - package-ecosystem: "docker"
-    directory: "/"
+  - package-ecosystem: 'docker'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "thursday"
-      time: "09:00"
+      interval: 'weekly'
+      day: 'thursday'
+      time: '09:00'
     open-pull-requests-limit: 3
     labels:
-      - "dependencies"
-      - "docker"
+      - 'dependencies'
+      - 'docker'
