--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,13 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
       "inputs": ["src/**", "public/**", "package.json"],
-      "env": ["VITE_SUPABASE_URL", "VITE_SUPABASE_ANON_KEY"]
+      "env": [
+        "VITE_SUPABASE_URL",
+        "VITE_SUPABASE_ANON_KEY",
+        "NEXT_PUBLIC_SUPABASE_URL",
+        "NEXT_PUBLIC_SUPABASE_ANON_KEY",
+        "SUPABASE_SERVICE_ROLE_KEY"
+      ]
     },
     "mobile#build": {
       "dependsOn": ["^build"],
