--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,20 +15,12 @@
     "validate": "pnpm run type-check && pnpm run lint && pnpm run test:ci"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
-    "@react-three/postprocessing": "^3.0.4",
-    "@lovendo/shared": "workspace:*",
     "framer-motion": "^12.23.26",
-    "gsap": "^3.14.2",
-    "lenis": "^1.3.17",
-    "leva": "^0.10.1",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "three": "^0.182.0",
-    "zustand": "^5.0.9"
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
