--- a/services/job-queue/Dockerfile
+++ b/services/job-queue/Dockerfile
@@ -1,45 +1,43 @@
-# Use Node.js 20 Alpine for smaller image size
 FROM node:20-alpine AS base
-
-# Apply security updates (CVE fix: c-ares use-after-free)
 RUN apk update && apk upgrade --no-cache
-
-# Install pnpm globally
 RUN npm install -g pnpm
-
-# Set working directory
 WORKDIR /app
 
-# Copy package files
-COPY package.json pnpm-lock.yaml* ./
+FROM base AS deps
+# Copy workspace config
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json turbo.json tsconfig.json ./
 
-# Install dependencies
+# Copy packages that might be dependencies
+COPY packages/shared ./packages/shared
+
+# Copy the service code
+COPY services/job-queue ./services/job-queue
+
+# Install dependencies (from root)
 RUN pnpm install --frozen-lockfile
 
-# Copy source code
-COPY . .
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app ./
 
-# Build TypeScript
-RUN pnpm build
+# Build the specific package
+RUN pnpm turbo run build --filter=@lovendo/job-queue
 
-# Production stage
-FROM node:20-alpine AS production
-
-RUN npm install -g pnpm
-
+FROM base AS runner
 WORKDIR /app
 
-# Copy package files
-COPY package.json pnpm-lock.yaml* ./
+# Copy necessary files for runtime
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/pnpm-workspace.yaml ./
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
+COPY --from=builder /app/packages/shared/package.json ./packages/shared/
+COPY --from=builder /app/services/job-queue/package.json ./services/job-queue/
+COPY --from=builder /app/services/job-queue/dist ./services/job-queue/dist
 
-# Install production dependencies only
-RUN pnpm install --prod --frozen-lockfile
+WORKDIR /app/services/job-queue
 
-# Copy built code from base stage
-COPY --from=base /app/dist ./dist
-
-# Expose port
+ENV NODE_ENV production
 EXPOSE 3002
 
-# Default command (can be overridden)
 CMD ["pnpm", "start"]
