--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -35,12 +35,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.7
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo
+          domain: https://eu.infisical.com
           env-slug: prod
 
       - name: Setup pnpm
@@ -79,12 +80,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.7
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo
+          domain: https://eu.infisical.com
           env-slug: prod
 
       - name: Setup pnpm
@@ -137,12 +139,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.7
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo
+          domain: https://eu.infisical.com
           env-slug: prod
 
       - name: Setup pnpm
@@ -195,12 +198,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.7
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo
+          domain: https://eu.infisical.com
           env-slug: prod
 
       - name: Setup EAS
@@ -225,12 +229,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.7
         with:
           method: universal-auth
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
+          project-slug: lovendo
+          domain: https://eu.infisical.com
           env-slug: prod
 
       - name: Setup EAS
