--- a/services/job-queue/package.json
+++ b/services/job-queue/package.json
@@ -20,12 +20,13 @@
     "@supabase/supabase-js": "^2.88.0",
     "bullmq": "^5.1.0",
     "ioredis": "^5.3.2",
-    "zod": "^4.2.1",
+    "zod": "^3.24.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "@bull-board/express": "^5.10.0",
     "@bull-board/api": "^5.10.0",
-    "@bull-board/ui": "^5.10.0"
+    "@bull-board/ui": "^5.10.0",
+    "@lovendo/shared": "workspace:*"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
