--- a/services/job-queue/tsconfig.json
+++ b/services/job-queue/tsconfig.json
@@ -18,5 +18,5 @@
     "types": ["node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/__tests__", "**/*.test.ts"]
 }
