--- a/services/job-queue/package.json
+++ b/services/job-queue/package.json
@@ -17,21 +17,21 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@bull-board/api": "^5.10.0",
+    "@bull-board/express": "^5.10.0",
+    "@bull-board/ui": "^5.10.0",
+    "@lovendo/shared": "workspace:*",
     "@supabase/supabase-js": "^2.88.0",
     "bullmq": "^5.1.0",
-    "ioredis": "^5.3.2",
-    "zod": "^3.24.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "@bull-board/express": "^5.10.0",
-    "@bull-board/api": "^5.10.0",
-    "@bull-board/ui": "^5.10.0",
-    "@lovendo/shared": "workspace:*"
+    "ioredis": "^5.3.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.19.30",
     "eslint": "^9.39.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
